# personal

./: .editorconfig  .gitignore  cpp.cpp  Диплом Темы
DNS_Server_lab/: bst.h  dns.h  main.c
algorithms/codeforces/: a.cpp
allocators/: sequentional_allocator.h  tests.cpp
allocators/freelist/: freelist_allocator.h  reusing_allocator.h  tests.cpp
allocators/sequentional/: tests.cpp
codeforces/: b.cpp
competitive programming/: mat.cpp
competitive programming/euler function/: p02.cpp
competitive programming/icpc/: g.cpp
cp algorithms/euler function/: e.cpp
cp/urionlinejudge/: 1023.cpp  1028.cpp  1161.cpp  1212.cpp  1221.cpp  1251.cpp  1252.cpp  1424.cpp  1500.cpp  1805.cpp
data structures/: stack.c
data structures/bst/: bst.c  bst.cpp  dns.c
data structures/hashtable/: hashtable.c
data structures/list/: CMakeLists.txt  list.h  list.hpp  main.cpp
data structures/list/learn_gcc/: CMakeLists.txt
data structures/list/learn_gcc/include/: aligned_buffer.h  gcc_list  gcc_list.tcc  gcc_list_iterator.h  gcc_list_node.h  gcc_stl_list.h  gcc_tmp_utils.h  list  list.tcc  list_iterator.h  list_node.h  stl_list.h  tmp_utils.h
data structures/list/learn_gcc/src/: list.cpp
data structures/list/learn_gcc/tests/: assign.cpp  ctor.cpp  emplace.cpp  erase.cpp  front.cpp  front_and_back.cpp  insert.cpp  main.cpp  operator=.cpp  push_pop.cpp  swap_resize.cpp  test_utils.h  tests_driver.cpp
data structures/list/learn_gcc/tests/catch2/: catch.hpp
data structures/skiplists/: skiplist.c
data structures/vector/: vector.cpp  vector.h
icpc/: b.cpp  c.cpp  h.cpp
icpc/4final/: .h.cpp.swp  h.cpp
icpc/semi-finals/: m.cpp
interview_test_problems/nokia/: CMakeLists.txt  bad_3.csv  bad_4.csv  bad_5.csv  bad_6.csv  bad_7.csv  build.sh  build_debug.sh  csv_calculator.cpp  csv_calculator.h  file.csv  main.cpp  tests.cpp
interview_test_problems/nokia/csv_files/: bad_1.csv  bad_2.csv
interview_test_problems/wargaming/: answers.md
isa/isa::string/: CMakeLists.txt  string.cpp  string.h  string.hpp
isa/isa::string/tests/: assign_tests.cpp  constructor_tests.cpp  operator=_tests.cpp  test_utils.h
isa::string/: out_of_range.h  string.h
isalib/string/: CMakeLists.txt  out_of_range.h  string.cpp  string.h  string.hpp
myshel/: isashell.c
os/: asm_boot_sect.asm  experiment.asm  hello_bios.asm  nasm.sh  qemu_x86_64.sh  test_print.asm  test_puts.asm
os/asm_boot/: do_asm_boot.sh
os/experiment/: experiment2.asm
os/hello_bios/: do_hello_bios.sh  hello_bios.asm
os/include/: _hex2str.asm  _print_dx.asm  _puts.asm
os/raw_boot/: do_raw_boot.sh
os/stack/: stack.asm
qsort/: qsort.cpp
sizes/: sizes.c
string_c/: string.c
strings/string_cpp/: str.cpp  str.h  string.cpp  string.h  test.cpp
stroustup book/duff_device/: duff_device.h
templates/: find.cpp  template.cpp  vector.cpp  vector.h
union/: rax_union.c  union.c
urionlinejudge/: 1062.cpp
(+88 files in other folders)
